--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#f57f17</color>
+    <color name="colorPrimaryDark">#bc5100</color>
+    <color name="colorAccent">#05BBEF</color>
+
+    <color name="colorPrimaryLight">#ffb04c</color>
+
+    <color name="colorTextDark">#000000</color>
+    <color name="colorTextLight">#ffffff</color>
+
+    <color name="colorBackgroundDark">#e1e2e1</color>
+    <color name="colorBackgroundLight">#f5f5f6</color>
 </resources>
