--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,16 +19,28 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <Button
-        android:id="@+id/insert_or_delete_button"
+    android:id="@+id/insert_or_delete_button"
+    style="@style/StyleMainButtons"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="48dp"
+    android:background="@drawable/main_background_buttons"
+    android:onClick="onClick"
+    android:text="@string/insert_or_delete"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/sql_lite_intro_button" />
+
+    <Button
+        android:id="@+id/selection_button"
         style="@style/StyleMainButtons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/main_background_buttons"
         android:onClick="onClick"
-        android:text="@string/insert_or_delete"
+        android:text="@string/selecting"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sql_lite_intro_button" />
+        app:layout_constraintTop_toBottomOf="@+id/insert_or_delete_button" />
 
     <include
         android:id="@+id/toolbar"
