--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,16 +19,16 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <Button
-    android:id="@+id/insert_or_delete_button"
-    style="@style/StyleMainButtons"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="48dp"
-    android:background="@drawable/main_background_buttons"
-    android:onClick="onClick"
-    android:text="@string/insert_or_delete"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/sql_lite_intro_button" />
+        android:id="@+id/insert_or_delete_button"
+        style="@style/StyleMainButtons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="48dp"
+        android:background="@drawable/main_background_buttons"
+        android:onClick="onClick"
+        android:text="@string/insert_or_delete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sql_lite_intro_button" />
 
     <Button
         android:id="@+id/selection_button"
@@ -53,6 +53,18 @@
         android:text="@string/sqlite_joins"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/selection_button" />
+
+    <Button
+        android:id="@+id/transactions_button"
+        style="@style/StyleMainButtons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="56dp"
+        android:background="@drawable/main_background_buttons"
+        android:onClick="onClick"
+        android:text="@string/transactions"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sql_joins_button" />
 
     <include
         android:id="@+id/toolbar"
